calico-policies/public-network-isolation/jp-osa/allow-public-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone of
# your cluster to the cluster master through the public service endpoint. Note
# that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-public-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Nets for js-osa: osa21, osa22, osa23
      - 163.68.69.114/32
      - 163.68.69.122/32
      - 163.69.65.114/32
      - 163.69.65.122/32
      - 163.73.64.250/32
      - 163.73.65.194/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Nets for js-osa: osa21, osa22, osa23
      - 163.68.69.114/32
      - 163.68.69.122/32
      - 163.69.65.114/32
      - 163.69.65.122/32
      - 163.73.64.250/32
      - 163.73.65.194/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1500
  selector: ibm.role == 'worker_public'
  types:
  - Egress
